修正完了しました！

--- a/app/assets/stylesheets/_chat-main.scss
+++ b/app/assets/stylesheets/_chat-main.scss
@@ -31,7 +31,7 @@
       right: 40px;
     }
   }
-  .messages {
+  .message {
     height: calc(100vh - 190px);
     padding: 46px 40px;
     background-color: #fafafa;
