--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,7 +10,7 @@
     = link_to "#", class: "main-header__edit-btn" do
       Edit
   .message
-    %div{class: "message", data: {message_id: "#"}}
+    %div{data: {message_id: "#"}}
       .message__upper-info
         %p.message__upper-info__talker
           kenmotsu
